// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AuthDisplay Auth content proposed in midal 1`] = `
<div
  className="auth-display"
>
  <div
    className="auth-display__left"
  >
    <div>
      <h2
        className="auth-display__head"
      >
        Share your stories
      </h2>
      <h1
        className="auth-display__welcome"
      >
        Create your free account
      </h1>
      <p
        className="auth-display__text"
      >
        We’ll need your details for setting up your account to serve you more personalized stories from creatives.
      </p>
    </div>
  </div>
  <div
    className="auth-display__right"
  >
    <h4
      className="auth-display__heading"
    >
      Select one to get started
    </h4>
    <div
      className="auth-display__social-login"
    >
      IBUKUN COMPONENT
    </div>
    <div
      className="auth-display__seperator"
    >
      <p>
        or
      </p>
    </div>
    <div
      className="auth-display__auth-component"
    >
      <div
        className="auth-display__social-login"
      >
        JONATUS COMPONENT
      </div>
      <div
        className="auth-display__setup-tag"
      >
        <p>
          <p>
            Already have an account ? 
          </p>
          <button
            className="auth-display__create-account"
            onClick={[Function]}
            type="button"
          >
            signin
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AuthDisplay Auth signin content 1`] = `
<div
  className="auth-display"
>
  <div
    className="auth-display__left"
  >
    <div>
      <h2
        className="auth-display__head"
      >
        Share your stories
      </h2>
      <h1
        className="auth-display__welcome"
      >
        Create your free account
      </h1>
      <p
        className="auth-display__text"
      >
        We’ll need your details for setting up your account to serve you more personalized stories from creatives.
      </p>
    </div>
  </div>
  <div
    className="auth-display__right"
  >
    <h4
      className="auth-display__heading"
    >
      Select one to get started
    </h4>
    <div
      className="auth-display__social-login"
    >
      IBUKUN COMPONENT
    </div>
    <div
      className="auth-display__seperator"
    >
      <p>
        or
      </p>
    </div>
    <div
      className="auth-display__auth-component"
    >
      <div
        className="auth-display__social-login"
      >
        JONATUS COMPONENT
      </div>
      <div
        className="auth-display__setup-tag"
      >
        <p>
          <p>
            Already have an account ? 
          </p>
          <button
            className="auth-display__create-account"
            onClick={[Function]}
            type="button"
          >
            signin
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button add custom class 1`] = `
<button
  className="button__round"
  onClick={[Function]}
>
  auth
</button>
`;

exports[`Storyshots Button with Login text 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  Sign In
</button>
`;

exports[`Storyshots Button with submit text 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  Submit
</button>
`;

exports[`Storyshots Button without classname prop 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  no class
</button>
`;

exports[`Storyshots Icon active 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote icon--active"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon downvote 1`] = `
<button
  aria-label="downvote"
  className="icon icon--downvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon upvote 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Input field with email name 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
  />
</label>
`;

exports[`Storyshots Input password field 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Password"
    type="password"
  />
</label>
`;

exports[`Storyshots Modal click closed modal button 1`] = `
<div
  className="modal modal--hide"
>
  <div
    className="modal-content"
  >
    <button
      className="modal-content__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal-content__wrapper"
    />
  </div>
</div>
`;

exports[`Storyshots Modal default signup view 1`] = `
<div
  className="modal modal--show"
>
  <div
    className="modal-content"
  >
    <button
      className="modal-content__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal-content__wrapper"
    />
  </div>
</div>
`;

exports[`Storyshots ModalContent click closed modal button 1`] = `
<div
  className="modal-content"
>
  <button
    className="modal-content__close"
    type="button"
  >
    ✕
  </button>
  <div
    className="modal-content__wrapper"
  />
</div>
`;

exports[`Storyshots Signin sign in form 1`] = `
<form
  className="login-form"
  onSubmit={[Function]}
>
  <div
    className="login-form__success login-form__success--hide"
  >
    SIGNIN SUCCESSFUL !
  </div>
  <label
    className="input__label"
    htmlFor="email"
  >
    <input
      className="input__field"
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      type="text"
    />
  </label>
  <label
    className="input__label"
    htmlFor="password"
  >
    <input
      className="input__field"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
    />
  </label>
  <section
    className="login-form__errors"
  />
  <section
    className="login-form__submit-btn"
  >
    <button
      className="button__primary"
      type="submit"
    >
      Sign in
    </button>
  </section>
</form>
`;

exports[`Storyshots Vote downvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      11
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote nullvote 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote upvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      30
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;
